<resources>
    <string name="app_name">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="Button">Register</string>
    <string name="login">Login</string>
    <string name="Name">Name</string>
    <string name="Gender">Gender</string>
    <string name="father">Father Name</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="textview1">NAME</string>
    <string name="fathername">Father Name</string>
</resources>